enhance DSI-24 EEG triggering notebook with detailed code snippets and usage examples

--- a/notebooks/DSI24_EEG_Triggering_CodeSnippets_QuickReference.ipynb
+++ b/notebooks/DSI24_EEG_Triggering_CodeSnippets_QuickReference.ipynb
@@ -1,11 +1,171 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# DSI-24 EEG Triggering: Code Snippets & Quick Reference\n",
+    "\n",
+    "This file provides **ready-to-use** Python functions for sending triggers to the **DSI-24** EEG system, with minimal commentary. For detailed explanations (e.g., **tonic** vs. **phasic** or **immediate** vs. **on-flip** timing), please refer to the **Concepts** document. For a full implementation example (such as a Go/No-Go task in PsychoPy), see the corresponding **Implementation** document.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1. Basic Serial Setup\n",
+    "\n",
+    "Before sending triggers, ensure you have:\n",
+    "1. Installed **pyserial** (`pip install pyserial`) \n",
+    "2. Identified the **COM port** (e.g., `'COM3'`, `'/dev/ttyUSB0'`, etc.).\n",
+    "3. Initialized and reset the trigger line to **0** at the start.\n",
+    "\n",
+    "```python\n",
+    "import serial\n",
+    "\n",
+    "# Replace 'COM3' with your actual port (Windows), or '/dev/ttyUSB0' on Linux/macOS\n",
+    "ser = serial.Serial('COM3')\n",
+    "ser.write(str.encode(chr(0)))  # Reset trigger line to 0\n",
+    "print(\"DSI-24 serial port opened. Trigger line set to 0.\")\n",
+    "```\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Phasic (Brief) Triggers\n",
+    "\n",
+    "### 2.1 Immediate Phasic Trigger\n",
+    "```python\n",
+    "from psychopy import core\n",
+    "\n",
+    "def send_trigger_phasic(ser, trigger_value, dur=0.01):\n",
+    "    \"\"\"\n",
+    "    Send a brief (phasic) trigger immediately.\n",
+    "    \n",
+    "    ser           : serial.Serial object\n",
+    "    trigger_value : int (e.g., 10)\n",
+    "    dur           : float (seconds to hold the trigger)\n",
+    "    \"\"\"\n",
+    "    start_time = core.getTime()\n",
+    "    ser.write(str.encode(chr(trigger_value)))\n",
+    "    \n",
+    "    elapsed = core.getTime() - start_time\n",
+    "    remaining = dur - elapsed\n",
+    "    if remaining > 0:\n",
+    "        core.wait(remaining)\n",
+    "    \n",
+    "    # Reset back to 0 after the pulse\n",
+    "    ser.write(str.encode(chr(0)))\n",
+    "```\n",
+    "\n",
+    "`Usage Example:`\n",
+    "\n",
+    "`send_trigger_phasic(ser, 10, dur=0.02)  # 20 ms pulse of value 10`\n",
+    "\n",
+    "### 2.2 On-Flip Phasic Trigger\n",
+    "\n",
+    "```python\n",
+    "from psychopy import core\n",
+    "\n",
+    "def send_trigger_onflip_phasic(win, ser, trigger_value, dur=0.05):\n",
+    "    \"\"\"\n",
+    "    Schedule a brief phasic trigger to fire on the next screen flip.\n",
+    "    \n",
+    "    win           : psychopy.visual.Window object\n",
+    "    ser           : serial.Serial object\n",
+    "    trigger_value : int (e.g., 20)\n",
+    "    dur           : float (seconds to hold the trigger)\n",
+    "    \"\"\"\n",
+    "    def turn_trigger_on():\n",
+    "        ser.write(str.encode(chr(trigger_value)))\n",
+    "        print(f\"[PHASIC-ON-FLIP] Trigger {trigger_value} sent.\")\n",
+    "\n",
+    "    # Schedule for next flip\n",
+    "    win.callOnFlip(turn_trigger_on)\n",
+    "    win.flip()          # Trigger goes high here\n",
+    "    core.wait(dur)      # Hold the trigger\n",
+    "    ser.write(str.encode(chr(0)))\n",
+    "    print(\"[PHASIC-ON-FLIP] Trigger reset to 0.\")\n",
+    "```\n",
+    "`Usage Example:`\n",
+    "`send_trigger_onflip_phasic(win, ser, 20, dur=0.05)`   _50 ms pulse of value 20_\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Tonic (Sustained) Triggers\n",
+    "\n",
+    "### 3.1 Immediate Tonic Trigger\n",
+    "\n",
+    "```python\n",
+    "def send_trigger_tonic(ser, trigger_value):\n",
+    "    \"\"\"\n",
+    "    Set a sustained (tonic) trigger immediately.\n",
+    "    \n",
+    "    ser           : serial.Serial object\n",
+    "    trigger_value : int (e.g., 5)\n",
+    "    \"\"\"\n",
+    "    ser.write(str.encode(chr(trigger_value)))\n",
+    "    print(f\"[TONIC] Trigger set to {trigger_value}. (Must reset later.)\")\n",
+    "\n",
+    "```\n",
+    "`Usage Example:`\n",
+    "`send_trigger_tonic(ser, 5)`  _Holds value 5 indefinitely or until reset_trigger_tonic is called._\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Reset Tonic Trigger\n",
+    "\n",
+    "```python\n",
+    "def reset_trigger_tonic(ser):\n",
+    "    \"\"\"\n",
+    "    Reset a tonic trigger back to 0.\n",
+    "    \n",
+    "    ser : serial.Serial object\n",
+    "    \"\"\"\n",
+    "    ser.write(str.encode(chr(0)))\n",
+    "    print(\"[TONIC] Trigger reset to 0.\")\n",
+    "\n",
+    "```\n",
+    "`Usage Example:`\n",
+    "`reset_trigger_tonic(ser)`  _Immediately sets the line back to 0._\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 On_Flip Tonic Trigger\n",
+    "\n",
+    "```python\n",
+    "def send_trigger_onflip_tonic(win, ser, trigger_value):\n",
+    "    \"\"\"\n",
+    "    Schedule a tonic trigger to begin on the next screen flip.\n",
+    "    \n",
+    "    win           : psychopy.visual.Window object\n",
+    "    ser           : serial.Serial object\n",
+    "    trigger_value : int (e.g., 9)\n",
+    "    \"\"\"\n",
+    "    def turn_trigger_on():\n",
+    "        ser.write(str.encode(chr(trigger_value)))\n",
+    "        print(f\"[TONIC-ON-FLIP] Trigger {trigger_value} set on flip (reset manually).\")\n",
+    "\n",
+    "    # Schedule for next flip\n",
+    "    win.callOnFlip(turn_trigger_on)\n",
+    "    win.flip()\n",
+    "```\n",
+    "\n",
+    "`Usage Example:`\n",
+    "`send_trigger_onflip_tonic(win, ser, 9)` _The line goes to 9 on flip and stays high until reset_trigger_tonic(ser) is called._\n"
+   ]
   }
  ],
  "metadata": {
