enhance DSI-24 EEG triggering notebook with additional explanations and practical tips for trigger implementation

--- a/notebooks/DSI24_EEG_Triggering_CodeSnippets_QuickReference.ipynb
+++ b/notebooks/DSI24_EEG_Triggering_CodeSnippets_QuickReference.ipynb
@@ -13,9 +13,8 @@
     "## 1. Basic Serial Setup\n",
     "\n",
     "Before sending triggers, ensure you have:\n",
-    "1. Installed **pyserial** (`pip install pyserial`) \n",
-    "2. Identified the **COM port** (e.g., `'COM3'`, `'/dev/ttyUSB0'`, etc.).\n",
-    "3. Initialized and reset the trigger line to **0** at the start.\n",
+    "1. Identified the **COM port** (e.g., `'COM3'`, `'/dev/ttyUSB0'`, etc.).\n",
+    "2. Initialized and reset the trigger line to **0** at the start.\n",
     "\n",
     "```python\n",
     "import serial\n",
@@ -25,8 +24,7 @@
     "ser.write(str.encode(chr(0)))  # Reset trigger line to 0\n",
     "print(\"DSI-24 serial port opened. Trigger line set to 0.\")\n",
     "```\n",
-    "\n",
-    "\n"
+    "---\n"
    ]
   },
   {
@@ -34,6 +32,8 @@
    "metadata": {},
    "source": [
     "## 2. Phasic (Brief) Triggers\n",
+    "\n",
+    "Phasic triggers are short pulses—ideal for marking discrete, time-locked events (e.g., stimulus onset).\n",
     "\n",
     "### 2.1 Immediate Phasic Trigger\n",
     "```python\n",
@@ -100,6 +100,8 @@
    "source": [
     "## 3. Tonic (Sustained) Triggers\n",
     "\n",
+    "Tonic triggers remain active at a nonzero value until explicitly reset—perfect for long blocks or conditions.\n",
+    "\n",
     "### 3.1 Immediate Tonic Trigger\n",
     "\n",
     "```python\n",
@@ -165,6 +167,56 @@
     "\n",
     "`Usage Example:`\n",
     "`send_trigger_onflip_tonic(win, ser, 9)` _The line goes to 9 on flip and stays high until reset_trigger_tonic(ser) is called._\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Combining Tonic & Phasic\n",
+    "- Tonic for long blocks or conditions:\n",
+    "    ```python\n",
+    "    send_trigger_tonic(ser, 5)  # Marks \"Block A\" is active\n",
+    "    ```\n",
+    "\n",
+    "- Phasic for discrete events within that block:\n",
+    "    ```python\n",
+    "    send_trigger_phasic(ser, 10)  # Marks a stimulus or response onset\n",
+    "    ```\n",
+    "\n",
+    "- Remember to reset the tonic value at the end of the block:\n",
+    "    ```python\n",
+    "    reset_trigger_tonic(ser)\n",
+    "    ```\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Practical Tips\n",
+    "1. __Initialize Early__\n",
+    "\n",
+    "    Open the serial port (e.g., `ser = serial.Serial('COM3'))` at the start of your experiment. Reset the line to 0 to avoid stray triggers.\n",
+    "\n",
+    "2. __Use Named Constants__\n",
+    "\n",
+    "    Define triggers like `GO_STIM_ONSET = 10` or `TASK_START = 50` for clarity.\n",
+    "\n",
+    "3. __Respect Hardware Constraints__\n",
+    "\n",
+    "    Many EEG amplifiers (including the DSI-24) require a minimum pulse width (e.g., 10 ms) for reliable trigger detection.\n",
+    "\n",
+    "4. __Test & Debug__\n",
+    "\n",
+    "    Use print/log statements to confirm the DSI-24 receives each trigger code as expected.\n",
+    "\n",
+    "\n",
+    "For __deeper conceptual explanations__ (e.g., Tonic vs. Phasic, Immediate vs. On-Flip) or a __step-by-step tutorial__ integrating these functions into a Go/No-Go task, see the other documents in this series:\n",
+    "\n",
+    "- _DSI24_EEG_Triggering_Concepts_BestPractices_\n",
+    "- _DSI24_GoNoGoDemo_PsychoPy_TriggerImplementation_"
    ]
   }
  ],
