enhance DSI-24 EEG triggering notebook with detailed explanations on combining tonic and phasic triggers

--- a/notebooks/DSI24_EEG_Triggering_CodeSnippets_QuickReference.ipynb
+++ b/notebooks/DSI24_EEG_Triggering_CodeSnippets_QuickReference.ipynb
@@ -174,21 +174,26 @@
    "metadata": {},
    "source": [
     "## 4. Combining Tonic & Phasic\n",
-    "- Tonic for long blocks or conditions:\n",
+    "\n",
+    "Often, you’ll want to **mix** both trigger styles in the same experiment. For example, if you have a **long block** representing a particular task condition, you might use a **tonic** trigger to mark that entire interval. Meanwhile, you can embed **phasic** triggers at precise moments (stimulus onset, response detection) within that block.\n",
+    "\n",
+    "1. **Tonic for Extended Periods or Blocks**  \n",
+    "   ```python\n",
+    "   send_trigger_tonic(ser, 5)  # \"Block A\" is active\n",
+    "\n",
+    "2. **Phasic for Discrete Events**\n",
     "    ```python\n",
-    "    send_trigger_tonic(ser, 5)  # Marks \"Block A\" is active\n",
+    "    send_trigger_phasic(ser, 5)  # Marks \"Block A\" is active\n",
     "    ```\n",
     "\n",
-    "- Phasic for discrete events within that block:\n",
-    "    ```python\n",
-    "    send_trigger_phasic(ser, 10)  # Marks a stimulus or response onset\n",
-    "    ```\n",
+    "`Usage Example:`\n",
+    "Imagine a __2-minute__ “Task” block followed by a __1-minute__ “Rest” block. At the start of __“Task”__ you set a tonic trigger (e.g., `5`) to denote that block in your EEG data. Every time a stimulus appears, you send a __phasic__ trigger (e.g., `10`) aligned with stimulus onset. At the end of “Task,” you reset the tonic trigger, then set a different tonic trigger for __“Rest”__ (e.g., 6). This way:\n",
     "\n",
-    "- Remember to reset the tonic value at the end of the block:\n",
-    "    ```python\n",
-    "    reset_trigger_tonic(ser)\n",
-    "    ```\n",
-    "---\n"
+    "- Analysts can see exactly when Task vs. Rest blocks began and ended.\n",
+    "- Precise event triggers are still captured within each block, allowing time-locked analyses such as ERP responses.\n",
+    "\n",
+    "By combining these approaches, you maintain both a clear overview of major phases and high temporal precision for short events.\n",
+    "\n"
    ]
   },
   {
