enhance DSI-24 EEG triggering notebook with improved organization and clarity in content structure

--- a/notebooks/DSI24_GoNoGoDemo_PsychoPy_TriggerImplementation.ipynb
+++ b/notebooks/DSI24_GoNoGoDemo_PsychoPy_TriggerImplementation.ipynb
@@ -4,15 +4,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "This document provides a comprehensive guide for integrating DSI EEG triggers into a Go/No-Go experiment using PsychoPy. It focuses on the practical implementation of both tonic and phasic triggers, ensuring precise event marking for accurate EEG data alignment and analysis.\n",
+    "This document builds on two companion notebooks:\n",
+    "1. **DSI24_EEG_Triggering_Concepts_BestPractices**  \n",
+    "   - Covers detailed explanations of *tonic vs. phasic* triggers, *immediate vs. on-flip* timing, and general guidelines for robust serial communication.\n",
+    "2. **DSI24_EEG_Triggering_CodeSnippets_QuickReference**  \n",
+    "   - Provides short, ready-to-use code functions for sending triggers (both tonic and phasic), handling immediate vs. on-flip timing, and managing your serial port.\n",
+    "\n",
+    "> **Note**: In this tutorial, we will **not** repeat the code or best practice details already covered in those notebooks. Instead, we’ll outline the end-to-end workflow for integrating triggers into a Go/No-Go experiment (or any comparable design) in PsychoPy, with links pointing you to the relevant sections in the **Code Snippets** and **Best Practices** notebooks.\n",
+    "\n",
+    "\n",
     "# 1. Introduction\n",
     "\n",
-    "In many EEG experiments, sending **event markers** (also called **triggers**) from your behavioral task software (e.g., PsychoPy) to your EEG amplifier (e.g., DSI-24) is crucial. These markers help you align recorded brain signals with specific events in your paradigm (such as stimulus onsets, responses, or condition changes).\n",
+    "In many EEG experiments, sending **event markers** (a.k.a. *triggers*) from your behavioral task software (e.g., **PsychoPy**) to your **DSI-24** amplifier is crucial for time-locking recorded brain signals with specific experimental events (such as stimulus presentations, participant responses, and block onsets).\n",
     "\n",
-    "**Why This Matters**  \n",
-    "- **Accurate Data Alignment**: Triggers help ensure that what you see in your EEG data directly corresponds to events in your experiment.  \n",
-    "- **Simpler Analysis**: Precise event markers make it easier to measure and compare brain responses to specific stimuli or conditions.  \n",
+    "### Why This Tutorial?\n",
     "\n",
-    "This guide briefly explains the difference between **Tonic** (sustained) and **Phasic** (brief) triggers, how to implement them in PsychoPy/Pavlovia, and some best practices for smooth EEG-data collection.\n",
+    "- **High-Level Overview**: You will see a structured approach to implementing triggers in a typical experimental design (e.g., Go/No-Go).\n",
+    "- **References to Existing Resources**: Detailed code examples and best practices (e.g., choosing tonic vs. phasic, immediate vs. on-flip) are already covered in the companion notebooks. We provide references where needed, so you can quickly find the relevant sections.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Tonic vs. Phasic Triggers (Brief Recap)\n",
+    "\n",
+    "A short refresher on the two main trigger styles:\n",
+    "\n",
+    "1. **Tonic (Sustained) Triggers**  \n",
+    "   - Best for marking extended intervals (e.g., an entire block or continuous condition).\n",
+    "   - Remain high until you explicitly reset them to zero.\n",
+    "   - Refer to [*DSI24_EEG_Triggering_Concepts_BestPractices → Section 3*](#) for a thorough explanation and use cases.\n",
+    "\n",
+    "2. **Phasic (Brief) Triggers**  \n",
+    "   - Short pulses (often 10–50 ms) to mark discrete events (e.g., stimulus onset, button press).\n",
+    "   - Refer to [*DSI24_EEG_Triggering_Concepts_BestPractices → Section 3*](#) for the pros and cons, and when phasic triggers are most appropriate.\n",
+    "\n",
+    "For the actual Python functions that send these triggers, see:\n",
+    "- **Tonic** methods in [*DSI24_EEG_Triggering_CodeSnippets_QuickReference → Section 3*](#).\n",
+    "- **Phasic** methods in [*DSI24_EEG_Triggering_CodeSnippets_QuickReference → Section 2*](#).\n",
     "\n",
     "---"
    ]
@@ -22,133 +56,40 @@
    "metadata": {},
    "source": [
     "\n",
-    "# 2. Tonic vs. Phasic Triggers (Brief Overview)\n",
+    "## 3. Immediate vs. On-Flip Timing\n",
     "\n",
-    "## 2.1 Definitions\n",
+    "In PsychoPy, you may need to schedule triggers to fire:\n",
+    "1. **Immediately** (as soon as your code runs).\n",
+    "2. **On-Flip** (aligned with the next screen refresh).\n",
     "\n",
-    "- **Tonic (Sustained) Triggers**  \n",
-    "  A trigger set to a nonzero value at the start of a long-lasting event or block (e.g., an entire experimental condition), which remains high until explicitly reset to zero.\n",
+    "This decision depends on whether you need frame-locked synchronization (often crucial in ERP-type tasks) or simply want to mark an event at the exact time it occurs in code.\n",
     "\n",
-    "- **Phasic (Brief) Triggers**  \n",
-    "  A short pulse—often just a few milliseconds—that marks a precise moment in time (e.g., a stimulus onset, a keypress).\n",
+    "For conceptual details about **immediate vs. on-flip** triggers, see [*DSI24_EEG_Triggering_Concepts_BestPractices → Section 4*](#).  \n",
+    "For the corresponding code, see [*DSI24_EEG_Triggering_CodeSnippets_QuickReference → Sections 2.1 & 2.2 (Phasic)* or *Sections 3.1 & 3.3 (Tonic)*](#).\n",
     "\n",
-    "## 2.2 When to Use Each\n",
+    "---\n",
     "\n",
-    "- **Use Tonic Triggers**  \n",
-    "  - **Extended Blocks/Conditions** (e.g., 2-minute rest vs. 2-minute task).  \n",
-    "  - **Neurofeedback** or tasks where a constant trigger value helps identify continuous phases.\n",
+    "## 4. Setting Up the Serial Connection\n",
     "\n",
-    "- **Use Phasic Triggers**  \n",
-    "  - **Discrete, Time-Locked Events** (e.g., stimulus flashes, button presses).  \n",
-    "  - **ERP Studies** where precise event timing is crucial.\n",
+    "Before sending any triggers, you need to:\n",
+    "1. **Identify the COM port** (e.g., `COM3` on Windows, `/dev/ttyUSB0` on Linux/macOS).\n",
+    "2. **Initialize** the serial connection (e.g., `serial.Serial('COM3')`).\n",
+    "3. **Reset** the line to `0` to ensure no accidental triggers persist from a previous session.\n",
     "\n",
-    "## 2.3 Why It Matters\n",
+    "For best practices on serial setup (e.g., recommended baud rate, port identification), see [*DSI24_EEG_Triggering_Concepts_BestPractices → Section 2.1 & Section 5*](#).  \n",
+    "For the minimal code snippet, see [*DSI24_EEG_Triggering_CodeSnippets_QuickReference → Section 1*](#).\n",
     "\n",
-    "Choosing the right trigger approach can **simplify analysis** and help you pinpoint specific EEG responses:\n",
-    "- **Tonic** markers make it easy to see at a glance which condition was active during extended intervals.\n",
-    "- **Phasic** markers provide **high temporal precision** for events like stimulus onsets and rapid responses.\n",
-    "\n",
-    "---"
+    "---\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Quick Implementation Steps in PsychoPy\n",
+    "# 5. Integrating Triggers into a Go/No-Go Task in PsychoPy\n",
     "\n",
-    "This section provides a **minimal** workflow for sending triggers via PsychoPy (and by extension, Pavlovia). For more advanced usage or extended code examples, please refer to the full notebook or the “code snippets only” document.\n",
-    "\n",
-    "## 3.1 Opening the Serial Port\n",
-    "\n",
-    "At the very beginning of your script (e.g., “Begin Experiment” tab in PsychoPy Builder):\n",
-    "```python\n",
-    "import serial\n",
-    "from psychopy import core\n",
-    "\n",
-    "# Replace 'COM3' (Windows) or '/dev/ttyUSB0' (Linux/macOS) with the correct port\n",
-    "ser = serial.Serial('COM3')\n",
-    "ser.write(str.encode(chr(0)))  # Ensure the trigger line starts at 0\n",
-    "print(\"Serial port opened. Trigger line reset to 0.\")\n",
-    "```\n",
-    "\n",
-    "## 3.2  Immediate vs. On-Flip Trigger Timing\n",
-    "\n",
-    "When sending triggers, decide if you need them to occur **as soon as you call the function** (immediate) or **exactly on the next screen refresh (on-flip)**\n",
-    "\n",
-    "- Immediate:\n",
-    "\n",
-    "   ```python\n",
-    "   def send_trigger_phasic(ser, value, dur=0.01):\n",
-    "    \"\"\"\n",
-    "    Send a brief (phasic) trigger immediately.\n",
-    "    ser  : serial.Serial object\n",
-    "    value: Integer trigger code\n",
-    "    dur  : How long (in seconds) to keep the trigger active\n",
-    "    \"\"\"\n",
-    "    ser.write(str.encode(chr(value)))  # Turn the trigger on\n",
-    "    core.wait(dur)                     # Wait for 'dur' seconds\n",
-    "    ser.write(str.encode(chr(0)))      # Reset the trigger to 0\n",
-    "   ```\n",
-    "   This trigger fires at the exact moment your code runs, independent of screen presentation.\n",
-    "\n",
-    "- On-Flip:\n",
-    "\n",
-    "   ```python\n",
-    "   def send_trigger_onflip_phasic(win, ser, value, dur=0.01):\n",
-    "    \"\"\"\n",
-    "    Schedule a brief phasic trigger to coincide with the next screen flip.\n",
-    "    win  : psychopy.visual.Window object\n",
-    "    ser  : serial.Serial object\n",
-    "    value: Integer trigger code\n",
-    "    dur  : Duration (in seconds) to keep the trigger active\n",
-    "    \"\"\"\n",
-    "    def turn_trigger_on():\n",
-    "        ser.write(str.encode(chr(value)))  # Trigger on\n",
-    "\n",
-    "    # Schedule the trigger to fire on the next flip\n",
-    "    win.callOnFlip(turn_trigger_on)\n",
-    "    win.flip()          # The trigger goes high here\n",
-    "    core.wait(dur)      # Keep it active briefly\n",
-    "    ser.write(str.encode(chr(0)))  # Reset the trigger to 0\n",
-    "   ```\n",
-    "   This approach aligns the trigger with your screen refresh, ensuring stimulus onset and EEG marker occur simultaneously.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3.3 Example Usage in PsychoPy Builder\n",
-    "\n",
-    "- __Begin Routine__ Tab (Stimulus Onset)\n",
-    "\n",
-    "    ```python\n",
-    "    # If 'go_stim' is the current stimulus:\n",
-    "    if thisTrial['stimType'] == 'go':\n",
-    "        send_trigger_phasic(ser, 10)  # or send_trigger_onflip_phasic(win, ser, 10)\n",
-    "    else:\n",
-    "        send_trigger_phasic(ser, 11)\n",
-    "    ```\n",
-    "- __End Routine__ Tab (Response Evaluation)\n",
-    "\n",
-    "    ```python\n",
-    "    if 'space' in key_resp.keys:\n",
-    "        send_trigger_phasic(ser, 20)  # Mark correct response\n",
-    "    else:\n",
-    "        send_trigger_phasic(ser, 21)  # Mark incorrect response\n",
-    "    ```\n",
-    "\n",
-    "---\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4.  Implementing the Go/No-Go Experiment with Trigger Code in PsychoPy (Phasic and Tonic)\n",
-    "\n",
-    "This section walks you through a **Go/No-Go** example for sending triggers with **either phasic or tonic** approaches. A more detailed, step-by-step version is available in the longer notebook. For **fully working online examples**, please see:\n",
+    "Below is a structured overview of how you might integrate triggers into a simple **Go/No-Go** experiment. For **fully working online examples**, please see:\n",
     "\n",
     "- **Phasic Example**: [Go/No-Go with Phasic Triggers](https://gitlab.pavlovia.org/smilingdevil/gonogo_phasic_triggers)  \n",
     "- **Tonic Example**: [Go/No-Go with Tonic Triggers](https://gitlab.pavlovia.org/smilingdevil/gonogo_tonic_triggers)\n"
@@ -163,29 +104,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.1 Overall Experiment Flow\n",
+    "## 5.1 Overall Experiment Flow\n",
     "\n",
-    "Here the goal is to present a “Go” or “No-Go” stimulus, let the participant respond (or withhold response), and send **EEG triggers** at key moments (stimulus onset, correct/incorrect response). \n",
-    "- Suggested Builder Structure\n",
-    "   1. **Welcome Routine**  \n",
-    "      - Instructions or initial setup  \n",
-    "   2. **Trial Routine**  \n",
-    "      - Stimulus (Go or No-Go)  \n",
-    "      - Keyboard response  \n",
-    "      - Code component for sending triggers  \n",
-    "   3. **Break/End Routine**  \n",
-    "      - Could include a message or final triggers.\n",
+    "A typical PsychoPy Builder flow might look like:\n",
+    "\n",
+    "1. **Intro** Routine  \n",
+    "   - Display instructions.  \n",
+    "   - Initialize the serial port and define your trigger constants (e.g., `GO_TRIGGER = 10`, `NOGO_TRIGGER = 11`).\n",
+    "2. **Wait** Routine  \n",
+    "   - A short pause, giving the participant time to read instructions or settle.\n",
+    "3. **Start_Trigger** Routine  \n",
+    "   - Optionally set a Phasic trigger marking the start of the main task. \n",
+    "4. **Trial** Routine (within a loop called `trials`)  \n",
+    "   - Present a “Go” or “No-Go” stimulus (image).  \n",
+    "   - Collect keyboard input.  \n",
+    "   - Send phasic triggers at onset or in response to participant actions.\n",
+    "5. **Feedback** Routine (optional)  \n",
+    "   - Provide correctness feedback, or present other relevant info.\n",
+    "6. **End_Trigger** Routine  \n",
+    "   - Send the phasic trigger to mark the end of the trial.\n",
+    "7. **End** Routine  \n",
+    "   - Close the serial port, display a farewell message, etc.\n",
     "\n",
     "Below, you can see the **Flow** panel in PsychoPy, which sequences all the routines:\n",
+    "<center>\n",
     "\n",
-    "![Figure 4.1 – Experiment Flow in PsychoPy](attachment:image.png)\n",
-    "**Figure 4.1.** The experiment begins with an `intro` routine, followed by a `wait` routine (2 seconds), then a `start_trigger` routine to send initial triggers, multiple trials (enclosed in a loop named `trials`), a `feedback` routine, and finally the `end_trigger` and `end` routine.\n",
+    "![Figure 5.1 – Experiment Flow in PsychoPy](attachment:image.png)\n",
+    "**Figure 5.1.** The Experiment Flow in PsychoPy.\n",
     "\n",
-    "- **Intro**: Presents instructions or a welcome screen.  \n",
-    "- **Wait**: A brief waiting period to let participants settle.  \n",
-    "- **Start_Trigger**: Initializes or sends an initial marker for the task.  \n",
-    "- **Trial** & **Feedback**: The main loop for Go/No-Go trials.  \n",
-    "- **End_Trigger** & **End**: Sends final triggers and shows a concluding screen."
+    "</center>"
    ]
   },
   {
@@ -197,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Intro (Welcome) Routine\n",
+    "## 5.2 Intro (Welcome) Routine\n",
     "\n",
     "Within the **Intro** routine, we’ve placed two important **Code components**:\n",
     "\n",
