enhance DSI-24 EEG triggering notebook with improved clarity and organization in code component descriptions

--- a/notebooks/DSI24_GoNoGoDemo_PsychoPy_TriggerImplementation.ipynb
+++ b/notebooks/DSI24_GoNoGoDemo_PsychoPy_TriggerImplementation.ipynb
@@ -151,15 +151,16 @@
     "1. **import_functions**  \n",
     "2. **triggers_list**\n",
     "\n",
-    "This routine runs once at the beginning of the experiment to import libraries, initialize the serial connection, and define trigger constants.\n",
+    "This routine runs once at the beginning of the experiment to import libraries, initialize the serial connection, and define trigger constants. In the following code components, you can see how these imports and triggers fit together within the Intro routine.\n",
     "\n",
-    "### 4.2.1 `import_functions` Code Component\n",
+    "### 5.2.1 `import_functions` Code Component\n",
+    "\n",
+    "<center>\n",
+    "\n",
     "![Figure 4.2 – “import_functions” Code Component](attachment:image-2.png)\n",
-    "**Figure 4.2.** The `import_functions` code component contains:\n",
-    "- Import statements (`import serial`, `from psychopy import core`, etc.),\n",
-    "- The opening of the serial port (e.g., `Ser = serial.Serial('COM3')`),\n",
-    "- Definitions for **tonic** and/or **on-flip** trigger functions (`send_trigger_tonic`, `reset_trigger_tonic`, `send_trigger_onflip_tonic`, etc.).\n",
+    "**Figure 4.2.** The `import_functions` code component\n",
     "\n",
+    "</center>\n",
     "All of this is placed under **“Before experiment”** or **“Begin experiment”** tabs so the serial port is opened and functions are available throughout the experiment.\n"
    ]
   },
@@ -172,19 +173,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.2.2 `triggers_list` Code Component\n",
+    "### 5.2.2 `triggers_list` Code Component\n",
+    "\n",
+    "<center>\n",
     "\n",
     "![Figure 4.3 – “triggers_list” Code Component](attachment:image.png)\n",
     "\n",
-    "**Figure 4.3.** In `triggers_list`, we define **constants** that map trigger labels to specific integer values. For example:\n",
-    "```python\n",
-    "TASK_TONIC_TRIGGER = 1\n",
-    "GO_ONSET_TONIC_TRIGGER = 2\n",
-    "NOGO_ONSET_TONIC_TRIGGER = 4\n",
-    "CORRECT_RESP_TONIC_TRIGGER = 8\n",
-    "INCORRECT_RESP_TONIC_TRIGGER = 16\n",
+    "**Figure 4.3.** The “triggers_list” Code Component\n",
     "\n",
-    "These constants make the code more readable and help ensure consistency instead of using raw numerical codes throughout the script."
+    "</center>\n",
+    "\n"
    ]
   },
   {
